@@ -2,7 +2,7 @@
  *
  * Copyright (C) 1995-1997  Peter Mattis, Spencer Kimball and Josh MacDonald
  * Copyright (C) 1997-2000  GLib Team and others
- * Copyright (C) 2007  Jürg Billeter
+ * Copyright (C) 2007-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -77,8 +77,8 @@ public class Gee.HashMap<K,V> : Object, Map<K,V> {
 	private Node<K,V>** lookup_node (K key) {
 		uint hash_value = _key_hash_func (key);
 		Node<K,V>** node = &_nodes[hash_value % _array_size];
-		while ((*node) != null && (hash_value != ((Node<K,V>) (*node)).key_hash || !_key_equal_func (((Node<K,V>) (*node)).key, key))) {
-			node = &(((Node<K,V>) (*node)).next);
+		while ((*node) != null && (hash_value != (*node)->key_hash || !_key_equal_func ((*node)->key, key))) {
+			node = &((*node)->next);
 		}
 		return node;
 	}
@@ -89,9 +89,9 @@ public class Gee.HashMap<K,V> : Object, Map<K,V> {
 	}
 
 	public V get (K key) {
-		weak Node<K,V> node = (Node<K,V>) (*lookup_node (key));
+		Node<K,V>* node = (*lookup_node (key));
 		if (node != null) {
-			return node.value;
+			return node->value;
 		} else {
 			return null;
 		}
@@ -100,7 +100,7 @@ public class Gee.HashMap<K,V> : Object, Map<K,V> {
 	public void set (K key, V value) {
 		Node<K,V>** node = lookup_node (key);
 		if (*node != null) {
-			((Node<K,V>) (*node)).value = value;
+			(*node)->value = value;
 		} else {
 			uint hash_value = _key_hash_func (key);
 			*node = new Node<K,V> (key, value, hash_value);
@@ -113,9 +113,9 @@ public class Gee.HashMap<K,V> : Object, Map<K,V> {
 	public bool remove (K key) {
 		Node<K,V>** node = lookup_node (key);
 		if (*node != null) {
-			((Node<K,V>) (*node)).key = null;
-			((Node<K,V>) (*node)).value = null;
-			*node = ((Node<K,V>) (*node)).next;
+			(*node)->key = null;
+			(*node)->value = null;
+			*node = (*node)->next;
 			_nnodes--;
 			resize ();
 			_stamp++;
@@ -271,6 +271,7 @@ public class Gee.HashMap<K,V> : Object, Map<K,V> {
 
 		public bool add (V value) {
 			assert_not_reached ();
+			return false;
 		}
 
 		public void clear () {
@@ -279,6 +280,7 @@ public class Gee.HashMap<K,V> : Object, Map<K,V> {
 
 		public bool remove (V value) {
 			assert_not_reached ();
+			return false;
 		}
 
 		public bool contains (V value) {
